--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,9 @@ set(HEADERS # Files
 
 			# Logger
 			src/cpputils/logger/logger.h
+
+			# Serialization
+			src/cpputils/serialization/iserializable.h
 			
 			# Exceptions
 			src/cpputils/exceptions/exception.h
