--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,4 @@ add_library(${PROJECT_NAME} STATIC ${CPPUTILS_SRC})
 add_subdirectory(libs/spdlog)
 target_link_libraries(${PROJECT_NAME} PRIVATE spdlog::spdlog)
 
-target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
+target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
