--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,6 @@ set(CPPUTILS_SRC # Files
 add_library(${PROJECT_NAME} STATIC ${CPPUTILS_SRC})
 
 add_subdirectory(libs/spdlog)
-target_link_libraries(${PROJECT_NAME} PRIVATE spdlog::spdlog)
+target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog)
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
