I'm tired AF, but i have improved serialization/deserialization by implementing cyclic references handling. It seems it works well because one basic test passes. Also i've made some classes' constant definitions private by using 'private static const' instead of 'constexpr'. Respectively i made changes in CMakeLists.txt. Also, as i downgraded C++ standard to C++17, i was used to write own endianness checker, which wasn't tested yet. I hope i won't be sent to the infantry to die in Donbass.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,19 +14,21 @@ set(CPPUTILS_SRC
 			cpputils/sha256.cpp
 			cpputils/binaryarchive.cpp
 			cpputils/countdownlatch.cpp
+			cpputils/serializer.cpp
+			cpputils/endiannessprovider.cpp
 )
 
 set(CPPUTILS_HEADERS 
 			cpputils/encryptor.h			
 			cpputils/abstractencryptor.h
 			cpputils/aes256encryptor.h
-			cpputils/binaryarchive.h
 			cpputils/countdownlatch.h
 			cpputils/logger.h
 			cpputils/files.h
 			cpputils/hasher.h
 			cpputils/md5hasher.h
 			cpputils/sha256hasher.h
+			cpputils/binaryarchive.h
 			cpputils/serializable.h
 			cpputils/serializer.h
 			cpputils/threadpool.h
