--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ project(cpputils-test)
 
 set(CPPUTILS_TEST_SRC	main.cpp
 						src/binaryarchivetest.cpp
+						src/serializertest.cpp
 )
 
 add_executable(${PROJECT_NAME} ${CPPUTILS_TEST_SRC})
