--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CPPUTILS_TEST_SRC	main.cpp
 						src/binaryarchivetest.cpp
 						src/serializertest.cpp
 						src/hashertest.cpp
+						src/encryptortest.cpp
 )
 
 add_executable(${PROJECT_NAME} ${CPPUTILS_TEST_SRC})
