--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,12 @@ set(CPPUTILS_INSTALL_BIN ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 set(CPPUTILS_INSTALL_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 set(CPPUTILS_INSTALL_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_subdirectory(libs/spdlog)
-add_subdirectory(libs/gtest)
+if(NOT TARGET spdlog)
+	add_subdirectory(libs/spdlog)
+endif()
+if(NOT TARGET gtest)
+	add_subdirectory(libs/gtest)
+endif()
 
 add_subdirectory(src)
 add_subdirectory(test)
