--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,10 +34,12 @@ set(CPPUTILS_HEADERS
 			cpputils/threadpool.h
 )
 
-add_library(${PROJECT_NAME} STATIC ${CPPUTILS_SRC})
-target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog)
+if(NOT TARGET ${PROJECT_NAME})
+	add_library(${PROJECT_NAME} STATIC ${CPPUTILS_SRC})
+	target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog)
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+	target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-install(FILES ${CPPUTILS_HEADERS} DESTINATION ${CPPUTILS_INSTALL_INCLUDE})
-install(TARGETS ${PROJECT_NAME} DESTINATION ${CPPUTILS_INSTALL_LIB})
+	install(FILES ${CPPUTILS_HEADERS} DESTINATION ${CPPUTILS_INSTALL_INCLUDE})
+	install(TARGETS ${PROJECT_NAME} DESTINATION ${CPPUTILS_INSTALL_LIB})
+endif()
