add_subdirectory guards added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,7 @@ if(NOT TARGET gtest)
 	add_subdirectory(libs/gtest)
 endif()
 
-add_subdirectory(src)
-add_subdirectory(test)
+if(NOT TARGET cpputils)
+	add_subdirectory(src)
+	add_subdirectory(test)
+endif()
