Disabled C4996 in MSVC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ set(CPPUTILS_INSTALL_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 if(NOT TARGET spdlog)
 	add_subdirectory(libs/spdlog)
+		if(MSVC)
+			target_compile_options(spdlog PUBLIC "/wd4996")
+		endif()
 endif()
 if(NOT TARGET gtest)
 	add_subdirectory(libs/gtest)
